--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <h1>
         I am practicing Git and Git hub for the first time.
     </h1>
+    <h2>
+       I am learning HTML language.
+    </h2>
 </body>
 </html>
