--- a/service.html
+++ b/service.html
@@ -7,5 +7,8 @@
     <h1>
         Welcome to Home Page of Service
     </h1>
+    <h2>
+        This is a service page.
+    </h2>
 </body>
 </html>
