New headline and link added for booking

--- a/booking.html
+++ b/booking.html
@@ -7,5 +7,11 @@
     <h1>
         Welcome to Home Page of Booking
     </h1>
+    <h2>
+        You can book your appontments here by clicking on the below link.
+    </h2>
+    <a href="https://business.appointy.com/account/register/?_gl=1*ozithx*_gcl_au*ODgzNTMwMzE0LjE3MjkyNDE4MzI.*_ga*OTQ4ODczNjcyLjE3MjkyNDE4MzM.*_ga_CWLJ11ZHBF*MTcyOTI0MTgzMy4xLjAuMTcyOTI0MTgzMy42MC4wLjA.&_ga=2.48368165.208755868.1729241833-948873672.1729241833">
+        Click here to book appointment
+    </a>
 </body>
 </html>
